--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
   --font-NHD: var(--font-neue-haas-display);
 }
 @theme {
-  --color-primary: #504630;
+  --color-primary: #38302a;
   --color-secondary: #fffcf5;
   --color-tertiary: #504630;
   --color-accent: #89402c;
